objects/Rebate_Price_Quote_Data__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To store RPQ Related Data</description>
    <fields>
        <fullName>Approval_Threshold__c</fullName>
        <label>Approval Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Currency__c</fullName>
        <label>Default Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Per__c</fullName>
        <label>Default Per</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_UoM__c</fullName>
        <label>Default UoM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dist_Channel_Code__c</fullName>
        <label>Dist. Channel Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Code__c</fullName>
        <label>Division Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_KeyCombination__c</fullName>
        <label>Lookup KeyCombination</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Group__c</fullName>
        <label>Public Group</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPQ_Report_Public_Group__c</fullName>
        <label>RPQ Report Public Group</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retroactive_Days__c</fullName>
        <label>Retroactive Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>Sales Org Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Rebate Price Quote Data</label>
</CustomObject>